<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jarabot_cartographer</name>
  <version>1.0.0</version>
  <description>
    cartographer launch script in ROS 2 Humble
  </description>
  <maintainer email="jeyong@subak.io">Jeyong Shin</maintainer>
  <license>Apache 2.0</license>
  <author email="jeyong@subak.io">Jeyong Shin</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
