<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jarabot_navigation2</name>
  <version>2.1.5</version>
  <description>
    navigation2 launch script in ROS 2 Humble
  </description> 
  <maintainer email="jeyong@subak.io">Jeyong Shin</maintainer>
  <license>Apache 2.0</license>
  <author email="jeyong@subak.io">Jeyong Shin</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
