<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jarabot_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jeyong@gmail.com">jeyong</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- <depend>serial_driver</depend> ROS2에서는 지정안하다고 사용가능??  -->
  <depend>tf2</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>jarabot_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group> -->

  <!-- <exec_depend>rclcpp</exec_depend>
  <exec_depend>serial_driver</exec_depend>
  <exec_depend>tf2</exec_depend> -->

<!-- launch 사용을 위해서 추가 -->
  <exec_depend>ros2launch</exec_depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
